# FightNianCpp

./: CMakeLists.txt  README.md
cmake/modules/: FindlibSDL.cmake
includes/: Game.h  Player.h  shares.h  strdef.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Game.cpp  shares.cpp
